# bon-os

./: .config  .config.old  .gitignore  CMakeLists.txt  Kconfig  README.md  env.ps1  run.ps1  sdkconfig  sdkconfig.defaults
cmake/: kconfig.cmake  python.cmake  toolchain-x86_64-elf.cmake
config/: sdkconfig.cmake  sdkconfig.h
scripts/: kconfiggen.py  kconfiglib.py  menuconfig.py
src/kernel/: CMakeLists.txt
src/kernel/includes/: limine.h
src/kernel/includes/misc/: font.h  k_entry.h  kformat.h
src/kernel/src/: main.c
src/kernel/src/arch/x86/: io.c  io.h
src/kernel/src/arch/x86/exceptions/: exceptions.c  exceptions.h
src/kernel/src/arch/x86/gdt/: gdt.asm  gdt.c  gdt.h
src/kernel/src/arch/x86/idt/: idt.c  idt.h  isr_stubs.asm
src/kernel/src/framebuffer/: framebuffer.c  framebuffer.h  logging.c  logging.h
src/kernel/src/misc/: kformat.c
src/kernel/src/serial/: serial.c  serial.h
src/libc/: CMakeLists.txt
src/libc/include/: string.h
src/libc/src/memory/: memcmp.c  memcpy.c  memmove.c  memset.c
src/libc/src/string/: strcmp.c  strcpy.c  strlen.c
src/linker_scripts/: link-64-kernel.ld
